typescript/checker/tests/errors/import-not-existing/index.ts.stderr
error: NoSuchExport {
    span: Span {
        lo: BytePos(
            0,
        ),
        hi: BytePos(
            26,
        ),
        ctxt: #0,
    },
    items: [
        (
            Atom('Foo' type=inline),
            Span {
                lo: BytePos(
                    7,
                ),
                hi: BytePos(
                    10,
                ),
                ctxt: #0,
            },
        ),
    ],
}
 --> $DIR/tests/errors/import-not-existing/index.ts:1:1
  |
1 | import Foo from "./model";
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^

